Update .env, .env.dist, and 33 more files...

--- a/.env.local
+++ b/.env.local
@@ -3,9 +3,9 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=prod
-APP_DEBUG=0
-APP_LOCALE=en-US
+APP_ENV=dev
+APP_DEBUG=1
+APP_LOCALE=fr-FR
 APP_UPLOAD_DIRECTORY=%kernel.project_dir%/var/uploads
 APP_VERSION=~
 APP_SECRET=f899d611d6db7d2cf73a12bf85516596
@@ -45,9 +45,3 @@ DB_CHARSET=UTF8
 HTTP_PROXY=~
 HTTPS_PROXY=~
 ###< proxy configuration ###
-
-###> symfony/lock ###
-# Choose one of the stores below
-# LOCK_DSN=redis://localhost
-LOCK_DSN=flock
-###< symfony/lock ###
