--- a/composer.json
+++ b/composer.json
@@ -14,22 +14,30 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "ashleydawson/simple-pagination": "1.0.*",
+        "doctrine/annotations": "^1.0",
+        "doctrine/dbal": "^3",
+        "doctrine/doctrine-bundle": "^2.7",
+        "doctrine/doctrine-migrations-bundle": "^3.2",
+        "doctrine/orm": "^2.20",
         "eureka2/acroforms": "^1.0.6",
         "flow/jsonpath": "^0.4.0",
         "mobiledetect/mobiledetectlib": "^2.8",
         "mpdf/mpdf": "^7.1",
+        "phpdocumentor/reflection-docblock": "^5.6",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "^4.3.0",
         "symfony/console": "^4.3.0",
+        "symfony/dotenv": "^4.3.0",
         "symfony/expression-language": "^4.3.0",
         "symfony/flex": "^1.1",
         "symfony/framework-bundle": "^4.3.0",
         "symfony/lock": "^4.3.0",
         "symfony/monolog-bundle": "^3.1",
-        "symfony/orm-pack": "*",
         "symfony/process": "^4.3.0",
+        "symfony/property-access": "^4.3",
+        "symfony/property-info": "^4.3",
         "symfony/security-bundle": "^4.3.0",
-        "symfony/serializer-pack": "*",
+        "symfony/serializer": "^4.3",
         "symfony/swiftmailer-bundle": "^3.1",
         "symfony/twig-bundle": "^4.3.0",
         "symfony/validator": "^4.3.0",
@@ -38,21 +46,24 @@
         "willdurand/js-translation-bundle": "^3.0"
     },
     "require-dev": {
+        "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "^4.2",
         "symfony/css-selector": "^4.3.0",
-        "symfony/debug-pack": "*",
-        "symfony/dotenv": "^4.3.0",
+        "symfony/debug-bundle": "^4.3",
         "symfony/maker-bundle": "^1.0",
         "symfony/phpunit-bridge": "~3.4|~4.0",
-        "symfony/profiler-pack": "*",
-        "symfony/test-pack": "*",
-        "symfony/var-dumper": "^4.3.0"
+        "symfony/stopwatch": "^4.3",
+        "symfony/var-dumper": "^4.3.0",
+        "symfony/web-profiler-bundle": "^4.3"
     },
     "config": {
         "preferred-install": {
             "*": "dist"
         },
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "symfony/flex": true
+        }
     },
     "autoload": {
         "psr-4": {
